update post format

--- a/_posts/2016-12-21-16Fall@CMU.md
+++ b/_posts/2016-12-21-16Fall@CMU.md
@@ -1,3 +1,10 @@
+---
+layout: post
+title: 16Fall@CMU
+category: blog
+description: summary of the first semester at CMU
+---
+
 ### 16Fall@CMU
 
 在CMU的一个学期过得很快，因为每天都重复着同样的生活节奏，很累，但是收获真的很大。
